# openarm_ros2

openarm_bringup/launch/: openarm_gripette.launch.py
openarm_gripette_description/: CMakeLists.txt  b0404.stl  backplate.stl  camera_imu_support.stl  composite_part_1.stl  distal.stl  dm_j4310_1_2_step.stl  dm_j4310_1_2_step_1.stl  dm_j4310_1_2_step_2.stl  dm_j4340_2_step.stl  dm_j4340p_2_step.stl  dm_j8009p_2_step.stl  dm_j8009p_2_step_1.stl  elec_support.stl  elec_support_square.stl  feetech_sts3215__configuration_default.stl  fl6700zz_2_step.stl  fl6700zz_2_step_1.stl  fl6803zz_2_step.stl  gripper_base.stl  hfsb6_6060_750_1_step.stl  j1_a_1_step.stl  j1_b_2_step.stl  j1_c_1_step.stl  j1_d_1_step.stl  j1_e_1_step.stl  j2_a_1_step.stl  j2_b_2_step.stl  j2_c_2_step.stl  j4_a_2_step.stl  j4_b_2_step.stl  j4_c_2_step.stl  j4_d_2_step.stl  j4_e_2_step.stl  j5_a_3_step.stl  j6_a_3_step.stl  j6_b_3_step.stl  j6_c_right_2_step.stl  j6_d_3_step.stl  j7_a_2_step.stl  (+11 more)
openarm_gripette_description/urdf/: openarm_right_gripette.urdf
